--- a/source/flutter/Toolease/pubspec.yaml
+++ b/source/flutter/Toolease/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   go_router: ^16.2.0
   flutter_pdfview: ^1.3.2
   share_plus: ^10.1.2
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   drift_dev: ^2.28.1
